update badges in README and document

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,15 +19,13 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Project Status: Concept – Minimal or no implementation has been done yet, or the repository is only intended to be a limited example, demo, or proof-of-concept.](https://www.repostatus.org/badges/latest/concept.svg)](https://www.repostatus.org/#concept)
-[![R build status](https://github.com/jameel-institute/ji.rpkg.template/workflows/R-CMD-check/badge.svg)](https://github.com/jameel-institute/ji.rpkg.template/actions/workflows/R-CMD-check.yaml)
-[![Codecov test coverage](https://codecov.io/gh/jameel-institute/ji.rpkg.template/branch/main/graph/badge.svg)](https://app.codecov.io/gh/jameel-institute/ji.rpkg.template?branch=main)
-[![CRAN status](https://www.r-pkg.org/badges/version/ji.rpkg.template)](https://CRAN.R-project.org/package=ji.rpkg.template)
+[![R build status](https://github.com/jameel-institute/daedalus.data/workflows/R-CMD-check/badge.svg)](https://github.com/jameel-institute/daedalus.data/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/jameel-institute/daedalus.data/branch/main/graph/badge.svg)](https://app.codecov.io/gh/jameel-institute/daedalus.data?branch=main)
+[![CRAN status](https://www.r-pkg.org/badges/version/daedalus.data)](https://CRAN.R-project.org/package=daedalus.data)
 <!-- badges: end -->
 
 _daedalus.data_ is a package and repository to handle input data files for [_daedalus_](https://jameel-institute.github.io/daedalus/), Jameel Institute's combined economic-epidemiological model of emerging respiratory pandemic diseases.
 
-
-<!-- 3. Remove these instructions from `README.Rmd`, and re-render the `.md` file using `devtools::render_readme()`. -->
 
 _daedalus.data_ prepares data objects to be used by the _daedalus_ (see [here](https://github.com/jameel-institute/daedalus)) model.
 
