--- a/README.Rmd
+++ b/README.Rmd
@@ -57,6 +57,17 @@ Both _daedalus.data_ and _daedalus_ are under active development. To use them, a
 
 ## Quick start
 
+This package contains the following data sets:
+```r
+data(package = "daedalus.data")
+```
+
 ### Infections data
 
 Users can select infection parameters from among seven epidemics caused by directly-transmitted viral respiratory pathogens, which are stored in the package as `daedalus.data::infection_data`, with epidemic identifiers stored as `daedalus.data::epidemic_names`.
+
+
+## Related projects
+
+1. [DAEDALUS](https://jameel-institute.github.io/daedalus/)
+2. [DAEDALUS Compare](https://github.com/jameel-institute/daedalus.compare)
